aks-deployment/essedum-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: essedum-frontend-ui
  namespace: aipns # Namespace where the deployment will run
spec:
  replicas: 5 # Number of replicas
  selector:
    matchLabels:
      app: essedum-frontend-ui
  template:
    metadata:
      labels:
        app: essedum-frontend-ui
    spec:
      containers:
      - name: essedum-frontend-ui
        image: localhost:5000/essedum-ui:micro_latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        - containerPort: 8084
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: essedum-frontend-ui-nginx-config
