aks-deployment/builder-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: builder-service
  namespace: aipns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: builder
  template:
    metadata:
      labels:
        app: builder
    spec:
      serviceAccountName: builder-sa  # Grants permission per RBAC
      containers:
        - name: builder
          image:  localhost:5000/builder-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: dockerfile-template
              mountPath: /opt/fallback
      volumes:
        - name: dockerfile-template
          configMap:
            name: adk-dockerfile-template
---
apiVersion: v1
kind: Service
metadata:
  name: builder-service
  namespace: aipns
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: builder
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
  sessionAffinity: ClientIP
