aks-deployment/builderk-service-2-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: builderk-service-2
  namespace: aipns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: builderk-2
  template:
    metadata:
      labels:
        app: builderk-2
    spec:
      serviceAccountName: builder-sa  # Grants permission per RBAC
      containers:
        - name: builder
          image:  localhost:5000/builder-service-2:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: dockerfile-template
              mountPath: /opt/fallback
      volumes:
        - name: dockerfile-template
          configMap:
            name: adk-dockerfile-template
---
apiVersion: v1
kind: Service
metadata:
  name: builderk-service-2
  namespace: aipns
spec:
  selector:
    app: builderk-2
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
  sessionAffinity: ClientIP
