aks-deployment/data-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: essedum-backend-data
  namespace: aipns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: essedum-backend-data
  template:
    metadata:
      labels:
        app: essedum-backend-data
    spec:
      hostAliases:
      - ip: "localhost"
        hostnames:
        - "login.essedum-lfn.infosys.com"
        - "essedum-lfn.infosys.com"
      containers:
      - name: essedum-backend-data
        image: localhost:5000/essedum-data-service:micro_latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: essedum-backend-data-service
  namespace: aipns
spec:
  selector:
    app: essedum-backend-data
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
  type: ClusterIP
