aks-deployment/icip-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: essedum-backend-icip
  namespace: aipns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: essedum-backend-icip
  template:
    metadata:
      labels:
        app: essedum-backend-icip
    spec:
      hostAliases:
      - ip: "localhost"
        hostnames:
        - "login.essedum-lfn.infosys.com"
        - "essedum-lfn.infosys.com"
      containers:
      - name: essedum-backend-icip
        image: localhost:5000/essedum-icip-service:micro_latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: essedum-backend-icip-service
  namespace: aipns
spec:
  selector:
    app: essedum-backend-icip
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  type: ClusterIP
