aks-deployment/keycloak_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: aipns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2.3
          args:
            - "start-dev"
          ports:
            - containerPort: 8443
              protocol: TCP

          volumeMounts:
            - name: tls-cert
              mountPath: /etc/keycloak/certs
              readOnly: true
      volumes:
        - name: tls-cert
          secret:
            secretName: essedum-secret


---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: aipns
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: LoadBalancer
