aks-deployment/usm-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: essedum-backend-usm
  namespace: aipns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: essedum-backend-usm
  template:
    metadata:
      labels:
        app: essedum-backend-usm
    spec:
      hostAliases:
      - ip: "localhost"
        hostnames:
        - "login.essedum-lfn.infosys.com"
        - "essedum-lfn.infosys.com"
      containers:
      - name: essedum-backend-usm
        image: localhost:5000/essedum-usm-service:micro_latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: essedum-backend-usm-service
  namespace: aipns
spec:
  selector:
    app: essedum-backend-usm
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
