aks-deployment/vibe-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: essedum-backend-vibe
  namespace: aipns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: essedum-backend-vibe
  template:
    metadata:
      labels:
        app: essedum-backend-vibe
    spec:
      hostAliases:
      - ip: "localhost"
        hostnames:
        - "login.essedum-lfn.infosys.com"
        - "essedum-lfn.infosys.com"
      containers:
      - name: essedum-backend-vibe
        image: localhost:5000/essedum-vibe-service:micro_latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: essedum-backend-vibe-service
  namespace: aipns
spec:
  selector:
    app: essedum-backend-vibe
  ports:
  - protocol: TCP
    port: 8084
    targetPort: 8084
  type: ClusterIP
