aks-deployment/essedum-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: essedum-frontend-ingress
  namespace: aipns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
  - hosts:
    - essedum-lfn.infosys.com
    secretName: essedum-lfn-tls
  rules:
  - host: essedum-lfn.infosys.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: essedum-frontend-shell-service
            port:
              number: 8084
