aks-deployment/essedum-frontend-mfe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: essedum-frontend-mfe-ingress
  namespace: aipns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
  - hosts:
    - essedum-lfn.infosys.com
    secretName: essedum-lfn-tls
  rules:
  - host: essedum-lfn.infosys.com
    http:
      paths:
      - path: /mfe/agent(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: essedum-frontend-agent-service
            port:
              number: 80
      - path: /mfe/data-ops(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: essedum-frontend-data-ops-service
            port:
              number: 80
      - path: /mfe/integration(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: essedum-frontend-integration-service
            port:
              number: 80
      - path: /mfe/vibe-studio(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: essedum-frontend-vibe-studio-service
            port:
              number: 80
